[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-triage-env"
version = "1.0.0"
description = "Multi-turn ER triage environment where AI agents prioritize patients and allocate resources under constraints"
readme = "README.md"
authors = [{ name = "Hackathon Submission" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["api", "environment"]
include-package-data = true
